--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Daniel Matuzka Personal Website</title>
 </head>
 <body>
     <div class='navbar'>
         <div class='links'>
-          <a href="/"> About Me </a>
-          <a href="/work-experience"> Work Experience </a>
-          <a href="/projects"> Projects </a>
-          <a href="/contact"> Contact </a>
+          <a href="index.html"> About Me </a>
+          <a href="work-experience.html"> Work Experience </a>
+          <a href="projects.html"> Projects </a>
+          <a href="contact.html"> Contact </a>
         </div>
       </div>   
 </body>
