--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class='navbar'>
         <div class='links'>
-          <a href="index.html"> About Me </a>
-          <a href="work-experience.html"> Work Experience </a>
-          <a href="projects.html"> Projects </a>
-          <a href="contact.html"> Contact </a>
+          <a href="/"> About Me </a>
+          <a href="/work-experience"> Work Experience </a>
+          <a href="/projects"> Projects </a>
+          <a href="/contact"> Contact </a>
         </div>
       </div>   
 </body>
