--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Daniel Matuzka Personal Website</title>
 </head>
 <body>
-    <div class='navbar'>
-        <div class='links'>
-          <a href="/"> About Me </a>
-          <a href="/work-experience"> Work Experience </a>
-          <a href="/projects"> Projects </a>
-          <a href="/contact"> Contact </a>
-        </div>
-      </div>   
+    <nav>
+        <ul class="navbar">
+            <li><a href="/" class="active">About Me</a></li>
+            <li><a href="/work-experience">Work Experience</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+    </nav> 
 </body>
 </html>
