Adding navigation to all pages

--- a/index.html
+++ b/index.html
@@ -15,5 +15,18 @@
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav> 
+    <main>
+        <h1>About Me</h1>
+        <p>Hi, my name is Daniel Matuzka. I am a junior at Boston University studying Computer Science with a minor in Business Administartion.
+            I am originally from Kyiv, Ukraine.
+            I am an aspiring software engineer and full-stack developer.
+        </p>
+
+        <ul>Skills:
+            <li>Languages: HTML, CSS, Javascript, Typescript, Java, Python</li>
+            <li>Developer Tools: Node.js, Firebase, MongoDB, Postman, Git</li>
+            <li>Frameworks: React, Angular</li>
+        </ul>
+    </main>
 </body>
 </html>
