--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,5 +16,20 @@
             <li><a href="/contact" class="active">Contact</a></li>
         </ul>
     </nav> 
+    <header>
+        <h1>Contact Me</h1>
+    </header>
+    <section class="contact-info">
+        <p><strong>Phone:</strong> +1 (617) 416-4486</p>
+        <p><strong>Email:</strong> <a href="mailto:dmatuzka@bu.edu">dmatuzka@bu.edu</a></p>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/daniel-matuzka-3a1185295/" target="_blank" class="social-icon">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/dmatuzkax" target="_blank" class="social-icon">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
