updated home and projects sections

--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,23 @@
             <li><a href="/projects" class="active">Projects</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
-    </nav> 
+    </nav>
+    <header>
+        <h1>Projects</h1>
+    </header> 
+    <main class="projects">
+        <h2>FestFly</h2> <div class="skills"> React, Node.js/Express.js, MongoDB </div>								         
+        <li>Developed a web app that allows users to search for live events of their favorite artist and automatically find best-suited flights to the selected concerts’ location through utilizing Ticketmaster and Skyscanner API</li>
+        <li>Created a dynamic and responsive React frontend with a central styling theme together with Express.js routing</li>
+        <li>Enhanced the app through using OAuth and connecting to a MongoDB database for formatting the data between two API interfaces</li>
+
+        <br>
+        <br>
+
+        <h2>SkyCast</h2> <div class="skills">HTML, CSS, JavaScript  </div>                                                                         
+	    <li>Developed a responsive and user-friendly web application utilizing HTML, CSS, and JavaScript to deliver seven-day weather forecasts for major European cities</li>
+        <li>Integrated real-time updates by leveraging the 7Timer! API, ensuring dynamic and accurate weather information</li>
+
+    </main>
 </body>
 </html>
