--- a/index.html
+++ b/index.html
@@ -15,18 +15,27 @@
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav> 
-    <main>
+    <main class="info">
         <h1>About Me</h1>
-        <p>Hi, my name is Daniel Matuzka. I am a junior at Boston University studying Computer Science with a minor in Business Administartion.
-            I am originally from Kyiv, Ukraine.
-            I am an aspiring software engineer and full-stack developer.
-        </p>
-
-        <ul>Skills:
-            <li>Languages: HTML, CSS, Javascript, Typescript, Java, Python</li>
-            <li>Developer Tools: Node.js, Firebase, MongoDB, Postman, Git</li>
-            <li>Frameworks: React, Angular</li>
-        </ul>
+        <div class="profile-container">
+            <div class="profile-picture">
+                <img src="images/profile_pic.JPG">
+            </div>
+            
+            <div class="profile-text">
+                <p class="about">
+                    Hi, my name is Daniel Matuzka. I am a junior at Boston University studying Computer Science with a minor in Business Administartion.
+                    I am originally from Kyiv, Ukraine.
+                    I am an aspiring software engineer and full-stack developer.
+                </p>
+                <br>
+                <ul>Skills:
+                    <li>Languages: HTML, CSS, Javascript, Typescript, Java, Python</li>
+                    <li>Developer Tools: Node.js, Firebase, MongoDB, Postman, Git</li>
+                    <li>Frameworks: Express.js, React, Angular</li>
+                </ul>
+            </div>
+        </div>
     </main>
 </body>
 </html>
