updated home page and created work experience page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                     Hi, my name is Daniel Matuzka. I am a junior at Boston University studying Computer Science with a minor in Business Administartion.
                     I am originally from Kyiv, Ukraine.
                     I am an aspiring software engineer and full-stack developer.
+                    When I am not learning new skills or working on projects, I like to watch or play soccer - a sport I have been a huge fan of since I was a kid.
+                    I am also an avid music listener and enjoy everything from Hip-Hop and R&B to Alternative and Folk music. 
                 </p>
                 <br>
                 <ul>Skills:
