--- a/work-experience.html
+++ b/work-experience.html
@@ -15,5 +15,18 @@
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav> 
+    <div class="jobs">
+        <div class="job-container">
+            <div class="job-place">
+                <h2>Boston University</h2>	<p>Boston, MA</p>
+            </div>
+            <div class="job-position">
+                <h3>Course Assistant	</h3>							     			<p>Sep 2024 - Now</p>
+            </div>
+            <li>Facilitated lab and discussion sections, clarifying and guiding how to use in practice various concepts of probability in computing</li>
+            <li>Conducted office hours and provided personalized academic support to students on class material</li>
+            <li>Assisted with grading assignments and exams, delivered constructive feedback to students’ work</li>
+        </div>
+    </div>
 </body>
 </html>
