added assignments page

--- a/404.html
+++ b/404.html
@@ -11,7 +11,8 @@
                 '/': 'index.html',
                 '/work-experience': 'work-experience.html',
                 '/contact': 'contact.html',
-                '/projects': 'projects.html'
+                '/projects': 'projects.html',
+                '/assignments': 'assignments.html'
             };
             var fileToLoad = fileMap[path] || 'index.html';
             window.location.href = fileToLoad;
