--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <nav>
         <ul class="navbar">
             <li><a href="/">About Me</a></li>
+            <li><a href="/assignments">Assignments</a></li>
             <li><a href="/work-experience">Work Experience</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/contact" class="active">Contact</a></li>
