--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <ul class="navbar">
             <li><a href="/" class="active">About Me</a></li>
+            <li><a href="/assignments">Assignments</a></li>
             <li><a href="/work-experience">Work Experience</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/contact">Contact</a></li>
