--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
     <nav>
         <ul class="navbar">
             <li><a href="/">About Me</a></li>
+            <li><a href="/assignments">Assignments</a></li>
             <li><a href="/work-experience">Work Experience</a></li>
             <li><a href="/projects" class="active">Projects</a></li>
             <li><a href="/contact">Contact</a></li>
