--- a/work-experience.html
+++ b/work-experience.html
@@ -10,6 +10,7 @@
     <nav>
         <ul class="navbar">
             <li><a href="/">About Me</a></li>
+            <li><a href="/assignments">Assignments</a></li>
             <li><a href="/work-experience" class="active">Work Experience</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/contact">Contact</a></li>
