Added assignment page and added assignment 0

--- a/assignments.html
+++ b/assignments.html
@@ -16,5 +16,16 @@
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav> 
+    <main class="main-content">
+        <h1 class="assignment-header">Assignments</h1>
+        <div class="assignment-container">
+            <div class="assignment-box">
+                <h2>Assignment 0:</h2>
+                <p>In this assignment I created a personal website using HTML/CSS and hosted it using Github Pages. The website will contain links to all of my CS506 assignments</p>
+                <a href="https://github.com/dmatuzkax/dmatuzkax.github.io" class="btn" target="_blank">Github Link</a>
+            </div>
+
+        </div>
+    </main>
 </body>
 </html>
