updated assignments page

--- a/assignments.html
+++ b/assignments.html
@@ -21,8 +21,8 @@
         <div class="assignment-container">
             <div class="assignment-box">
                 <h2>Assignment 0:</h2>
-                <p>In this assignment I created a personal website using HTML/CSS and hosted it using Github Pages. The website will contain links to all of my CS506 assignments</p>
-                <a href="https://github.com/dmatuzkax/dmatuzkax.github.io" class="btn" target="_blank">Github Link</a>
+                <p>In this assignment I wrote a python script that adds two numbers together and prints their sum to the command line</p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-0 " class="btn" target="_blank">Github Link</a>
             </div>
 
         </div>
