fixed display issues on work experience page

--- a/work-experience.html
+++ b/work-experience.html
@@ -16,6 +16,7 @@
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav> 
+    <h1 class="work-header">Work Experience</h1>
     <div class="jobs">
         <div class="job-container">
             <div class="job-place">
