--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Daniel Matuzka Personal Website</title>
+    <title>About Me - Daniel Matuzka</title>
 </head>
 <body>
     <nav>
