--- a/assignments.html
+++ b/assignments.html
@@ -25,6 +25,12 @@
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-0 " class="btn" target="_blank">Github Link</a>
             </div>
 
+            <div class="assignment-box">
+                <h2>Assignment 1:</h2>
+                <p>In this assignment I used class-collected data for proposing a reasonable location to wait for an elevator to minimize the walking distance and than evaluated my hypothesis on additional test data</p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-1 " class="btn" target="_blank">Github Link</a>
+            </div>
+
         </div>
     </main>
 </body>
