--- a/assignments.html
+++ b/assignments.html
@@ -31,6 +31,14 @@
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-1 " class="btn" target="_blank">Github Link</a>
             </div>
 
+            <div class="assignment-box-2">
+                <h2>Assignment 2:</h2>
+                <video width="320" height="240" controls>
+                    <source src="Demo.mp4" type="video/mp4">
+                </video>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-2" class="btn" target="_blank">Github Link</a>
+            </div>
+
         </div>
     </main>
 </body>
