--- a/assignments.html
+++ b/assignments.html
@@ -22,13 +22,13 @@
             <div class="assignment-box">
                 <h2>Assignment 0:</h2>
                 <p>In this assignment I wrote a python script that adds two numbers together and prints their sum to the command line</p>
-                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-0 " class="btn" target="_blank">Github Link</a>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-0" class="btn" target="_blank">Github Link</a>
             </div>
 
             <div class="assignment-box">
                 <h2>Assignment 1:</h2>
                 <p>In this assignment I used class-collected data for proposing a reasonable location to wait for an elevator to minimize the walking distance and than evaluated my hypothesis on additional test data</p>
-                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-1 " class="btn" target="_blank">Github Link</a>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-1" class="btn" target="_blank">Github Link</a>
             </div>
 
             <div class="assignment-box-2">
@@ -39,6 +39,11 @@
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-2" class="btn" target="_blank">Github Link</a>
             </div>
 
+            <div class="assignment-box-3">
+                <h2 style="font-size: 20px;">Assignment 3:</h2>
+                <p style="color: #666;">In this assignment I implemented a custom SVD function for dimensionality reduction of data sets and tested how the number of selected features for model training affects the accuracy of the model and its time costs</p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-3" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
