--- a/assignments.html
+++ b/assignments.html
@@ -44,6 +44,14 @@
                 <p style="color: #666;">In this assignment I implemented a custom SVD function for dimensionality reduction of data sets and tested how the number of selected features for model training affects the accuracy of the model and its time costs</p>
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-3" class="btn" target="_blank">Github Link</a>
             </div>
+
+            <div class="assignment-box-4">
+                <h2>Assignment 4:</h2>
+                <video width="320" height="240" controls>
+                    <source src="assignment4.mp4" type="video/mp4">
+                </video>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-4" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
