--- a/assignments.html
+++ b/assignments.html
@@ -52,6 +52,15 @@
                 </video>
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-4" class="btn" target="_blank">Github Link</a>
             </div>
+
+            <div class="assignment-box" style="height: 170px;">
+                <h2>Assignment 5:</h2>
+                <p>In this assignment I implemented my own K-Nearest Neighbors (KNN) model from scratch to predict customer churn from a bank. 
+                    I used historical data to identify probability at which customers are likely to leave their bank. Evaluation of the model
+                    was done using the cross-validation technique.
+                </p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-5" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
