--- a/assignments.html
+++ b/assignments.html
@@ -61,6 +61,14 @@
                 </p>
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-5" class="btn" target="_blank">Github Link</a>
             </div>
+            <div class="assignment-box" style="height: 190px;">
+                <h2>Midterm:</h2>
+                <p>For my midterm examination I created a prediction model for Amazon Movie Review scores. I used columns of the provided dataset such as helpfulness
+                    indicators from other users, time of the review and text and sumamry of the review to extract my own features, and also experimented with 
+                    different classifier models. I managed to create a model with around 66% accuracy and prepared a report on my process.
+                </p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-midterm" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
