--- a/assignments.html
+++ b/assignments.html
@@ -69,6 +69,14 @@
                 </p>
                 <a href="https://github.com/dmatuzkax/dmatuzka-midterm" class="btn" target="_blank">Github Link</a>
             </div>
+            <div class="assignment-box" style="height: 190px;">
+                <h2>Assignment 6:</h2>
+                <p>In this assignment I created a visualization to explore how randomness can affect linear regression estimates. By modifying different paramters of random generation
+                    I looked at how much variability there can be in slopes and intercepts when there is no relationship between observed values. Demo video of
+                    my work can be found in the GitHub repo below.
+                </p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-6" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
