--- a/assignments.html
+++ b/assignments.html
@@ -81,7 +81,7 @@
                 <h2>Assignment 7:</h2>
                 <p>In this assignment I studied and examined hypothesis testing and confidence intervals in linear regression. I modified my webpage
                     from previous assignment to allow users to perform hypothesis testing on values of slopes and intercepts and generate confidence
-                    intervals based on simulations. Demo video of obseravtions can be found <a href="https://youtu.be/qcA6ObTMhHo" style="text-decoration: none">here </a> and in the GitHub repo below.
+                    intervals based on simulations. Demo video of observations can be found <a href="https://youtu.be/qcA6ObTMhHo" style="text-decoration: none">here </a> and in the GitHub repo below.
                 </p>
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-7" class="btn" target="_blank">Github Link</a>
             </div>
