--- a/assignments.html
+++ b/assignments.html
@@ -85,6 +85,14 @@
                 </p>
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-7" class="btn" target="_blank">Github Link</a>
             </div>
+            <div class="assignment-box" style="height: 190px;">
+                <h2>Assignment 8:</h2>
+                <p>In this assignment I explored the effect of shifting clusters in a dataset on the parameters of the logistic regression model.
+                    I developed the logic for fitting the model using generated datasets and created useful visualizations that explain how the change
+                    in shift distance affects parameters of the model.  Demo video of observations can be found <a href="https://youtu.be/6orjyNAqFCI" style="text-decoration: none">here </a> and in the GitHub repo below.
+                </p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-8" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
