--- a/assignments.html
+++ b/assignments.html
@@ -93,6 +93,13 @@
                 </p>
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-8" class="btn" target="_blank">Github Link</a>
             </div>
+            <div class="assignment-box" style="height: 170px;">
+                <h2>Assignment 9 (unfinished):</h2>
+                <p>In this assignment I worked on implementing a simple neural network and analyzing it by visualizing its learned features, 
+                    decision boundary and gradients.
+                </p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-9" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
