--- a/assignments.html
+++ b/assignments.html
@@ -100,6 +100,13 @@
                 </p>
                 <a href="https://github.com/dmatuzkax/dmatuzka-assignment-9" class="btn" target="_blank">Github Link</a>
             </div>
+            <div class="assignment-box" style="height: 170px;">
+                <h2>Extra Credit Assignment:</h2>
+                <p>In this assignment I created a prediction model to detect credit card fraud. I used a preexisting dataset from Kaggle to 
+                    extract features and train and tune the model for optimal performnace. Evaluation of the model is done using F1 Score.
+                </p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-extra_credit" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
