--- a/assignments.html
+++ b/assignments.html
@@ -107,6 +107,16 @@
                 </p>
                 <a href="https://github.com/dmatuzkax/dmatuzka-extra_credit" class="btn" target="_blank">Github Link</a>
             </div>
+            <div class="assignment-box" style="height: 230px;">
+                <h2>Assignment 10:</h2>
+                <p>In this assignment I created a small custom search engine using a premade image base. User can input 3 types of query: text query, image query, hybrid query.
+                    Image query can be done using CLIP embeddings or embeddings corresponding to the first k principle components of an image. Hybrid queries
+                    combine both text and image input, user just has to select the weight of text in the search. After receiving a query, the program outputs
+                    top 5 relevant images along with their similarity scores.
+                    Demo video of the project can be found <a href="https://youtu.be/3KxtSnV3zgo" style="text-decoration: none">here </a> and in the GitHub repo below.
+                </p>
+                <a href="https://github.com/dmatuzkax/dmatuzka-assignment-10" class="btn" target="_blank">Github Link</a>
+            </div>
         </div>
     </main>
 </body>
